--- a/jokrUI/src/main/res/layout/activity_jokr.xml
+++ b/jokrUI/src/main/res/layout/activity_jokr.xml
@@ -13,7 +13,9 @@
         android:id="@+id/tv_joke"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+        android:textStyle="bold"
+
         />
 
 </RelativeLayout>
